--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.tiles{margin-top: 70px;}
+.tiles{margin-top: 1%;}
 body{     background-color: rgb(238, 238, 238);}
 .banner{  margin-top: 100px;
           padding-top: 100px;}
@@ -14,12 +14,18 @@ nav{margin-bottom: 30px;}
 .learn{color: #0048d8;}
 nav:hover {background-color: #448afc;}
 .card{margin-top: 50px;}
-.marginTop{margin-top: 50px;}
+.marginTop{margin-top: 1%;}
 .cardText{margin-left: 5%;}
-.footer{   position: static;
-   left: 0;
+.Footer{   position: static;
    bottom: 0;
    width: 100%;
    background-color:#f2f2f2;
    color: rgb(29, 29, 29);
-   text-align: center;}
+   text-align: center;
+padding-top:30px;
+padding-bottom:30px;}
+.bottomspace{margin-bottom: 10%;}
+.bottomspaceBlog{margin-bottom: 22%;}
+.navbar-item:hover {
+    color: rgb(46, 46, 46);
+}
